--- a/src/components/Favicons.astro
+++ b/src/components/Favicons.astro
@@ -6,29 +6,26 @@ const settings = getSiteSettings();
 
 // Site-specific favicon imports using switch statement
 // Vite requires static import paths - cannot use template literals
+// Use ?url suffix to get URL strings instead of components/ImageMetadata
 let favIcon: string;
-let favIconSvg: { src: string };
-let appleTouchIcon: { src: string };
+let favIconSvg: string;
+let appleTouchIcon: string;
 
 switch (WEBSITE_ID) {
   case 'assessments':
-    favIcon = (await import('~/assets/images/assessments/favicons/favicon.ico')).default;
-    favIconSvg = (await import('~/assets/images/assessments/favicons/favicon.svg')) as unknown as { src: string };
-    appleTouchIcon = (await import('~/assets/images/assessments/favicons/apple-touch-icon.png')) as unknown as {
-      src: string;
-    };
+    favIcon = (await import('~/assets/images/assessments/favicons/favicon.ico?url')).default;
+    favIconSvg = (await import('~/assets/images/assessments/favicons/favicon.svg?url')).default;
+    appleTouchIcon = (await import('~/assets/images/assessments/favicons/apple-touch-icon.png?url')).default;
     break;
   case 'adhd':
-    favIcon = (await import('~/assets/images/adhd/favicons/favicon.ico')).default;
-    favIconSvg = (await import('~/assets/images/adhd/favicons/favicon.svg')) as unknown as { src: string };
-    appleTouchIcon = (await import('~/assets/images/adhd/favicons/apple-touch-icon.png')) as unknown as { src: string };
+    favIcon = (await import('~/assets/images/adhd/favicons/favicon.ico?url')).default;
+    favIconSvg = (await import('~/assets/images/adhd/favicons/favicon.svg?url')).default;
+    appleTouchIcon = (await import('~/assets/images/adhd/favicons/apple-touch-icon.png?url')).default;
     break;
   case 'autism':
-    favIcon = (await import('~/assets/images/autism/favicons/favicon.ico')).default;
-    favIconSvg = (await import('~/assets/images/autism/favicons/favicon.svg')) as unknown as { src: string };
-    appleTouchIcon = (await import('~/assets/images/autism/favicons/apple-touch-icon.png')) as unknown as {
-      src: string;
-    };
+    favIcon = (await import('~/assets/images/autism/favicons/favicon.ico?url')).default;
+    favIconSvg = (await import('~/assets/images/autism/favicons/favicon.svg?url')).default;
+    appleTouchIcon = (await import('~/assets/images/autism/favicons/apple-touch-icon.png?url')).default;
     break;
   default:
     throw new Error(`❌ Invalid WEBSITE_ID: ${WEBSITE_ID}. Must be 'assessments', 'adhd', or 'autism'.`);
@@ -38,6 +35,6 @@ const maskColour = settings.branding?.mask_icon_colour || '#8D46E7';
 ---
 
 <link rel="shortcut icon" href={favIcon} />
-<link rel="icon" type="image/svg+xml" href={favIconSvg.src} />
-<link rel="mask-icon" href={favIconSvg.src} color={maskColour} />
-<link rel="apple-touch-icon" sizes="180x180" href={appleTouchIcon.src} />
+<link rel="icon" type="image/svg+xml" href={favIconSvg} />
+<link rel="mask-icon" href={favIconSvg} color={maskColour} />
+<link rel="apple-touch-icon" sizes="180x180" href={appleTouchIcon} />
