--- a/src/components/blog/GridItem.astro
+++ b/src/components/blog/GridItem.astro
@@ -30,7 +30,7 @@ const link = APP_BLOG?.post?.isEnabled ? getPermalink(post.permalink, 'post') : 
               class="w-full md:h-full rounded shadow-lg bg-gray-400 dark:bg-slate-700"
               widths={[400, 900]}
               width={400}
-              sizes="(max-width: 900px) 400px, 900px"
+              sizes="(max-width: 767px) calc(100vw - 32px), (max-width: 1023px) 476px, 290px"
               alt={post.image_alt || post.title}
               aspectRatio="16:9"
               layout="cover"
@@ -44,7 +44,7 @@ const link = APP_BLOG?.post?.isEnabled ? getPermalink(post.permalink, 'post') : 
             class="w-full md:h-full rounded shadow-lg bg-gray-400 dark:bg-slate-700"
             widths={[400, 900]}
             width={400}
-            sizes="(max-width: 900px) 400px, 900px"
+            sizes="(max-width: 767px) calc(100vw - 32px), (max-width: 1023px) 476px, 290px"
             alt={post.title}
             aspectRatio="16:9"
             layout="cover"
