--- a/src/components/blog/SinglePost.astro
+++ b/src/components/blog/SinglePost.astro
@@ -76,7 +76,7 @@ const { post, url } = Astro.props;
             src={post.image}
             class="max-w-full lg:max-w-[900px] mx-auto mb-6 sm:rounded-md bg-gray-400 dark:bg-slate-700"
             widths={[400, 900]}
-            sizes="(max-width: 900px) 400px, 900px"
+            sizes="(max-width: 767px) calc(100vw - 32px), 768px"
             alt={post?.image_alt || post?.excerpt || 'Blog post featured image'}
             width={900}
             height={506}
