--- a/src/components/widgets/Content.astro
+++ b/src/components/widgets/Content.astro
@@ -80,7 +80,7 @@ const {
                   width={500}
                   height={500}
                   widths={[400, 768]}
-                  sizes="(max-width: 768px) 100vw, 432px"
+                  sizes="(max-width: 767px) calc(100vw - 32px), 608px"
                   layout="responsive"
                   {...image}
                 />
