--- a/src/components/blog/ListItem.astro
+++ b/src/components/blog/ListItem.astro
@@ -35,7 +35,7 @@ const link = APP_BLOG?.post?.isEnabled ? getPermalink(post.permalink, 'post') : 
                 class="absolute inset-0 object-cover w-full h-full mb-6 rounded shadow-lg bg-gray-400 dark:bg-slate-700"
                 widths={[400, 900]}
                 width={900}
-                sizes="(max-width: 900px) 400px, 900px"
+                sizes="(max-width: 767px) calc(100vw - 32px), (max-width: 1023px) 476px, 290px"
                 alt={post.title}
                 aspectRatio="16:9"
                 loading="lazy"
@@ -52,7 +52,7 @@ const link = APP_BLOG?.post?.isEnabled ? getPermalink(post.permalink, 'post') : 
               class="absolute inset-0 object-cover w-full h-full mb-6 rounded shadow-lg bg-gray-400 dark:bg-slate-700"
               widths={[400, 900]}
               width={900}
-              sizes="(max-width: 900px) 400px, 900px"
+              sizes="(max-width: 767px) calc(100vw - 32px), (max-width: 1023px) 476px, 290px"
               alt={post.title}
               aspectRatio="16:9"
               loading="lazy"
