--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -32,7 +32,7 @@
       url('/fonts/TogetherAssessments-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
     size-adjust: 115%;
   }
 
@@ -44,7 +44,7 @@
       url('/fonts/SylexiadSansMedium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
     size-adjust: 120%;
   }
 
