Access Panel Lighthouse

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -159,7 +159,7 @@ const metadata = {
           description: service.data.description,
           icon: service.data.icon || 'tabler:point',
           callToAction: {
-            text: 'Learn more',
+            text: `Learn more about ${service.data.title}`,
             href: `/services#${service.data.anchor}`,
           },
         }))
