--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -54,7 +54,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
               <>
                 {index !== 0 ? ' · ' : ''}
                 <a
-                  class="text-muted hover:text-gray-700 dark:text-gray-400 hover:underline transition duration-150 ease-in-out"
+                  class="text-muted hover:text-gray-700 dark:text-gray-400 underline hover:no-underline dark:underline dark:hover:no-underline transition duration-150 ease-in-out"
                   href={href}
                   set:html={text}
                 />
@@ -72,7 +72,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
                 {links.map(({ text, href, ariaLabel }) => (
                   <li class="mb-2">
                     <a
-                      class="text-muted hover:text-gray-700 hover:underline dark:text-gray-400 transition duration-150 ease-in-out"
+                      class="text-muted hover:text-gray-700 underline hover:no-underline dark:text-gray-400 dark:underline dark:hover:no-underline transition duration-150 ease-in-out"
                       href={href}
                       aria-label={ariaLabel}
                     >
